fix(server): an oversized image is a binary, not missing source
The binary rule now runs before either size bound, so a large image is reported as the
binary it is rather than as a file the review may have wanted. The tree's javadoc keeps
only what the code cannot say and points at GitRepositoryProperties for the bounds; the
docs paragraph that restated the catalog's selection scope is gone, since the page itself
says prose keeps no second catalog. The test fixture now carries every claim without a
comment: the image exceeds both bounds, and the source spans the sniffed head.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>